--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5a91f913-7e56-46e1-b91d-8f707c91eff0"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
